# projet_recommandation_films

./: .gitignore  Analyse_Projet_2_Solange.ipynb  analyse_imdb.ipynb  donnéesAE.py  prerequisite_venv.txt  pyproject.toml  requirements.txt  streamlit.css  streamlit.py
.devcontainer/: devcontainer.json
app/: films2.csv  films_final.csv  films_final_2.csv  filmsfinal.csv  streamlit.css  streamlit.py  streamlit_test.py
app.py/: app.py
