[project]
name = "dataanalyst-projet2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.6"
dependencies = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "pillow>=12.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "streamlit>=1.52.1",
    "streamlit-authenticator>=0.4.2",
    "streamlit-option-menu>=0.4.0",
]
